syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AlertConditionKindProto";


message AlertConditionKindMsg {
  enum EnumType {
    PHY = 0;
    TEC = 1;
    OTH = 2;
  }
  EnumType enum_value = 1;
}
