syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AlertConditionMonitoredLimitsProto";


message AlertConditionMonitoredLimitsMsg {
  enum EnumType {
    ALL = 0;
    LO_OFF = 1;
    HI_OFF = 2;
    NONE = 3;
  }
  EnumType enum_value = 1;
}
