syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AlertConditionReferenceProto";


message AlertConditionReferenceMsg {
  repeated string alert_condition_reference = 1;
}
